# openbsd-tools

./: .gitignore  README.md  configure.ac
difference/: cmp.patch  diff.patch  diff3.patch  doas.patch  sdiff.patch
include/: bsd.h  readpassphrase.h
src/: Makefile.am
src/cmp/: Makefile.am  cmp.c  regular.c
src/csplit/: Makefile.am  csplit.c
src/diff/: Makefile.am  diff.c  diff.h  diffdir.c  diffreg.c  xmalloc.c
src/diff3/: Makefile.am  diff3  diff3.1  diff3prog.c
src/doas/: Makefile.am  doas.c  env.c  oasis.c  parse.c  parse.y
src/fmt/: Makefile.am  fmt.c
src/indent/: Makefile.am  args.c  indent.c  lexi.c
src/libopenbsd/: Makefile.am  errc.c  fgetln.c  fparseln.c  pwcache.c  setmode.c  strlcat.c  strlcpy.c  strtofflags.c  verrc.c
src/ln/: Makefile.am  ln.c
src/pr/: Makefile.am  pr.c
src/sdiff/: Makefile.am  common.h  sdiff.c
src/stty/: Makefile.am  cchar.c  gfmt.c  key.c  modes.c  print.c  stty.c  stty.h
src/test/: Makefile.am  test.c
src/users/: Makefile.am  users.c
src/xinstall/: Makefile.am  xinstall.c
