AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libopenbsd.a
libopenbsd_a_SOURCES = \
			errc.c \
			fgetln.c \
			fparseln.c \
			getprogname.c \
			readpassphrase.c \
			reallocarray.c \
			setprogname.c \
			strlcat.c \
			strlcpy.c \
			strtonum.c \
			verrc.c \
			vwarnc.c \
			warnc.c
