AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libopenbsd.a
libopenbsd_a_SOURCES = \
			errc.c \
			fgetln.c \
			fparseln.c \
			getprogname.c \
			pwcache.c \
			readpassphrase.c \
			reallocarray.c \
			setmode.c \
			setprogname.c \
			strlcat.c \
			strlcpy.c \
			strtofflags.c \
			strtonum.c \
			verrc.c \
			vwarnc.c \
			warnc.c
